@@ -38,7 +38,7 @@ public class HdfsFileWriter extends OutputStreamIndexOutput {
   public static final int BUFFER_SIZE = 16384;
   
   public HdfsFileWriter(FileSystem fileSystem, Path path) throws IOException {
-    super(getOutputStream(fileSystem, path), BUFFER_SIZE);
+    super("fileSystem=" + fileSystem + " path=" + path, getOutputStream(fileSystem, path), BUFFER_SIZE);
   }
   
   private static final OutputStream getOutputStream(FileSystem fileSystem, Path path) throws IOException {
